nuevos cambios en equipo

--- a/src/Pages/Index.html
+++ b/src/Pages/Index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="nav">
         <div class="nav-hijo">
-             <a class="botones" href="/src/pages/campus.html">Login</a>
+             <a class="botones" href="/src/pages/Menu.html">Login</a>
              <a class="botones" href="/src/pages/samples.html">Proyect</a>
         </div>
     </div>
