nuevos cambios la menu, nueva pestana materia

--- a/src/Pages/Index.html
+++ b/src/Pages/Index.html
@@ -5,27 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio</title>
-    <link rel="stylesheet" href="../Styles/s_index.css">
+    <link rel="stylesheet" href="/src/Styles/s_index.css">
 
 </head>
 <body>
-<<<<<<< HEAD
-    <div class="nav">
-        <div class="nav-hijo">
-             <a class="botones" href="/src/pages/Menu.html">Login</a>
-             <a class="botones" href="/src/pages/samples.html">Proyect</a>
-=======
     <header>
         <div class="contenedor">
             <nav class="menu">
-                <a href="#">Acceder</a>
+                <a href="/src/Pages/Menu.html">Menu</a>
                 <a href="#">Acerda de</a>
                 <a href="#">Contacto</a>
             </nav>
-                 <div class="foto">
-                         <img src="../IMG/UnivalleRecortado.svg.png" width="115" height="115" alt="foto-logo">
-                 </div>
->>>>>>> 85848faa5d9cd38a7e28ddaada56acf807236bdd
+                <div class="foto">
+                <img src="/src/resources/img/UNIVALLEFONDO.jpg" width="115" height="115" alt="foto-logo">
+                </div>
+
         </div>
     </header>
     <section class="main">
