--- a/src/Pages/Materia.html
+++ b/src/Pages/Materia.html
@@ -1,12 +1,35 @@
-<!DOCTYPE html>
+Diseno de Interfaces de Usuario - 50<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="//src/resources/img/UnivalleRecortado.png">
+    <link rel="stylesheet" href="/src/Styles/s_materia.css">
 </head>
 <body>
-    <h1>Materia Seleccionada</h1>
+    
+
+    <div class="inicio">
+        <h1>Universidad del valle</h1>
+        <h3>campus virtual</h3>
+    </div>
+
+    <div class="contenido">
+        <h1>Diseno de Interfaces de Usuario - 50</h1>
+        <h2>06-750093M-50-202202041</h2>
+    </div>
+    
+    <div class="univalle">
+        <h1>Universidad del valle</h1>
+        <h2>Vicerrecteria Academica</h2>
+
+        <h3>Direcciones de Nuevas Tecnologias y Educacion Virtual</h3>
+        <h3>campusvirtual@correounivalle.edu.co</h3>
+        <h3>Edificio E18 (317) Oficina 2004 / Campus Melendez</h3>
+    </div>
+
+
 </body>
 </html>
