--- a/src/Pages/Materia.html
+++ b/src/Pages/Materia.html
@@ -1,4 +1,5 @@
-Diseno de Interfaces de Usuario - 50<!DOCTYPE html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +11,6 @@ Diseno de Interfaces de Usuario - 50<!DOCTYPE html>
 </head>
 <body>
     
-
     <div class="inicio">
         <h1>Universidad del valle</h1>
         <h3>campus virtual</h3>
@@ -20,7 +20,7 @@ Diseno de Interfaces de Usuario - 50<!DOCTYPE html>
         <h1>Diseno de Interfaces de Usuario - 50</h1>
         <h2>06-750093M-50-202202041</h2>
     </div>
-    
+
     <div class="univalle">
         <h1>Universidad del valle</h1>
         <h2>Vicerrecteria Academica</h2>
