correcion error botones

--- a/Pages/Perfil.html
+++ b/Pages/Perfil.html
@@ -55,7 +55,7 @@
             <h1 ><i class="icono fa-solid fa-house"></i> Inicio</h1>
         </div>
         </a>
-        <a class="clic" href="/src/index.html">
+        <a class="clic" href="/index.html">
         <div class="boton">
             <h1 ><i class="icono fa-solid fa-arrow-right-from-bracket"></i> Salir</h1>
         </div>
