ultimos cambios index

--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -94,7 +94,7 @@
             <a class="clic" href="/Pages/Materia.html">
             <div class="card">
                         <img class="img" src="/resources/codigo.jpg">
-                        <h1 class="titulo-card">Diseno de Interfacez</h1>
+                        <h1 class="titulo-card">Calculo 2</h1>
                         <p class = descripcion>Codigo #1000</p>
             </div>
             </a>
@@ -118,7 +118,7 @@
                     <i class="icono-redes fa-brands fa-instagram"></i>
                     <i class="icono-redes fa-brands fa-youtube"></i>
                     <br>
-                    Politicas de Privicidad
+                    Politicas de Privacidad
                 </div>
                     
         </div>
