--- a/Pages/Perfil.html
+++ b/Pages/Perfil.html
@@ -113,7 +113,7 @@
                     <i class="icono-redes fa-brands fa-instagram"></i>
                     <i class="icono-redes fa-brands fa-youtube"></i>
                     <br>
-                    Politicas de Privicidad
+                    Politicas de Privacidad
                     </div>
         </div>
         <div class="texto">
